--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,30 @@
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
 		</dependency>
+		<!-- 爬虫依赖 -->
+		<dependency>
+			<groupId>cn.edu.hfut.dmic.webcollector</groupId>
+			<artifactId>WebCollector</artifactId>
+			<version>2.09</version>
+		</dependency>
+		<dependency>
+			<groupId>cn.edu.hfut.dmic.webcollector.weiboapi</groupId>
+			<artifactId>WeiboAPI</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<!-- 爬虫依赖 END-->
+		<!-- mysql maven 依赖 -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.25</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.opennlp</groupId>
+			<artifactId>opennlp-tools</artifactId>
+			<version>1.5.3</version>
+		</dependency>
+		<!-- mysql maven 依赖 END -->
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
