--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<properties>
-		<java.version>1.6</java.version>
+		<java.version>1.8</java.version>
 		<java.encoding>UTF-8</java.encoding>
 		<webx-version>3.2.4</webx-version>
 		<spring-version>3.2.7.RELEASE</spring-version>
@@ -50,7 +50,7 @@
 			<artifactId>WeiboAPI</artifactId>
 			<version>1.0</version>
 		</dependency>
-		<!-- 爬虫依赖 END-->
+		<!-- 爬虫依赖 END -->
 		<!-- mysql maven 依赖 -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -63,6 +63,25 @@
 			<version>1.5.3</version>
 		</dependency>
 		<!-- mysql maven 依赖 END -->
+		<!-- dbcp + ibatis 相关依赖 -->
+		<dependency>
+			<groupId>org.apache.ibatis</groupId>
+			<artifactId>ibatis-sqlmap</artifactId>
+			<version>3.0-beta-10</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<!-- dbcp + ibatis 相关依赖 -END -->
+		<!-- math包依赖 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.6.1</version>
+		</dependency>
+		<!-- math包依赖 END -->
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
